# hexy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  GEMINI.md  README.md
.beads/: hexy.db  issues.jsonl
.gemini/: settings.json
hooks/: pre-commit
src/include/: Hex.h  HexGrid.h  TerrainType.h
src/src/: Hex.cpp  HexGrid.cpp  main.cpp
tests/: CMakeLists.txt  HexGridTest.cpp
